fixed shopping cart and details page on mobile

--- a/client/src/css/home.css
+++ b/client/src/css/home.css
@@ -290,7 +290,7 @@ html {
   /* Our Story */
 
   .ourstory {
-      padding: 30px 300px;
+      padding: 50px 300px;
       text-align: left;
       display: flex;
       flex-direction: column;
@@ -304,23 +304,22 @@ html {
   .ourstory h2 {
       font-size: 50px;
       font-family: 'Rock Salt', cursive;
+      position: relative;
   }
-
-  /* .ourstory h2::after {
-	content: '';
-    position: absolute;
-    display: block;
-    top: 0;
-    left: 0;
-    transform: translateX(110%);
-    height: 3px;
-    width: 300px;
-    border-radius: 2px;
-    background-color: var(--tertiary-color);
-} */
 
   .ourstory p {
       font-size: 20px;
+  }
+
+  .ourstory img {
+      margin-top: 30px;
+      transition: .5s ease-in;
+      box-shadow: 0px 0px 15px 5px rgba(0,0,0,0.15);
+  }
+
+  .ourstory img:hover {
+      opacity: .8;
+      box-shadow: 0px 0px 15px 5px rgba(0,0,0,0.15);
   }
 
   /* End Our Story */
@@ -623,7 +622,7 @@ html {
 }
 
 /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
-@media screen and (max-width: 575px){
+@media screen and (max-width: 480px){
     body, html {
         overflow-x: hidden;
     }
